--- a/VuforiaAR/app/src/main/res/values/styles.xml
+++ b/VuforiaAR/app/src/main/res/values/styles.xml
@@ -4,5 +4,8 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    <style name="SampleAppsTheme" parent="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+        <item name="android:windowNoTitle">true</item>
+    </style>
 
 </resources>
